[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=1]
[ext_resource path="res://World/Menus/Level Select.gd" type="Script" id=2]

[node name="Level Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -103.0
margin_right = 172.0
margin_bottom = 103.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 344.0
margin_bottom = 35.0
text = "Level Select"
align = 1

[node name="LevelSelect" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 344.0
margin_bottom = 92.0
alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer/LevelSelect"]
margin_left = 28.0
margin_top = 1.0
margin_right = 111.0
margin_bottom = 36.0
text = "Level: "

[node name="LevelSelect" type="OptionButton" parent="VBoxContainer/LevelSelect"]
margin_left = 115.0
margin_right = 315.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 0 )
align = 1

[node name="LevelDifficulty" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 344.0
margin_bottom = 149.0
alignment = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/LevelDifficulty"]
margin_top = 1.0
margin_right = 140.0
margin_bottom = 36.0
text = "Difficulty: "

[node name="DifficultySelect" type="OptionButton" parent="VBoxContainer/LevelDifficulty"]
margin_left = 144.0
margin_right = 344.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 0 )
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 344.0
margin_bottom = 206.0
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
